fix complexity of isValidMove